# crewai-Playground

./: .gitignore  README.md
FireCrawl/: FireCrawl.ipynb
demo_app/: README.md  pyproject.toml  report.md
demo_app/src/demo_app/: crew.py  main.py
demo_app_2/: README.md  pyproject.toml  report.md
demo_app_2/src/demo_app_2/: crew.py  main.py
groq/: README.md  pyproject.toml  report.md
groq/src/groq/: crew.py  main.py
latest_ai_development/: report.md
latest_ai_development/src/latest_ai_development/: crew.py
