[project]
name = "demo_app_2"
version = "0.1.0"
description = "demo_app_2 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0"
]

[project.scripts]
demo_app_2 = "demo_app_2.main:run"
run_crew = "demo_app_2.main:run"
train = "demo_app_2.main:train"
replay = "demo_app_2.main:replay"
test = "demo_app_2.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
