[project]
name = "groq"
version = "0.1.0"
description = "groq using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0"
]

[project.scripts]
groq = "groq.main:run"
run_crew = "groq.main:run"
train = "groq.main:train"
replay = "groq.main:replay"
test = "groq.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
